--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-radio-group": "^1.3.6",
@@ -30,10 +32,12 @@
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
     "next": "15.4.0-canary.47",
+    "pg": "^8.16.0",
     "postcss": "^8.5.3",
     "postgres": "^3.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.56.4",
     "server-only": "^0.0.1",
     "stripe": "^18.1.0",
     "swr": "^2.3.3",
@@ -48,7 +52,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "prettier": "^3.5.3",
-    "tailwindcss": "4.1.7"
+    "tailwindcss": "4.1.7",
+    "tsx": "^4.19.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
