--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
+
 services:
   postgres:
     image: postgres:16.4-alpine
     container_name: next_saas_starter_postgres
     environment:
-      POSTGRES_DB: typeflick1
+      POSTGRES_DB: postgres
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
-      - '54322:5432'
+      - "54322:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
