--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,19 @@
-# This is an example of your .env file format, which pnpm db:setup will create.
-# Note: this must be .env, not .env.local, without further configuration changes.
-POSTGRES_URL=postgresql://***
-STRIPE_SECRET_KEY=sk_test_***
-STRIPE_WEBHOOK_SECRET=whsec_***
-BASE_URL=http://localhost:3000
-AUTH_SECRET=***
+# Base de données PostgreSQL
+POSTGRES_URL="postgresql://username:password@localhost:5432/typeflick"
+
+# Stripe (Paiements)
+STRIPE_SECRET_KEY="sk_test_..."
+STRIPE_PUBLISHABLE_KEY="pk_test_..."
+STRIPE_WEBHOOK_SECRET="whsec_..."
+
+# NextAuth.js
+NEXTAUTH_SECRET="your-secret-key-here"
+NEXTAUTH_URL="http://localhost:3000"
+
+# Autres variables d'environnement
+NODE_ENV="development"
+
+# Variables optionnelles pour la production
+# VERCEL_URL="your-vercel-url"
+# DATABASE_URL="your-production-database-url"
+
